修改导航栏溢出，服务内容模块文字区域在小屏页面边界溢出

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,27 @@ html, body{
     font-size: 100%;
 	font-family:'Microsoft YaHei', 'Open Sans', sans-serif;
 }
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
+    margin:0;
+    padding:0;
+    border:0;
+    outline:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+}
+
 p{
 	margin:0;
 	font-size:14px;
@@ -478,7 +499,7 @@ p.aut{
 	text-align:center;
 }
 .w3l_team_grd img {
-	margin: 0 auto;
+	width: 100%;
 }
 /*-- //team --*/
 /*-- portfolio --*/
@@ -696,7 +717,8 @@ a.play-icon span {
     -o-border-radius: 50px;
     -ms-border-radius: 50px;
     margin: 0 auto;
-    text-align: center;
+	text-align: center;
+	font-size:16px;
 }
 .wthree_services_grid-left1 span{
 	font-size: 1.5em;
@@ -966,7 +988,7 @@ a.play-icon span {
 		padding: 2em;
 	}
 	.team_grid1_agileits {
-		padding: 1.5em 1em 1em;
+		padding: 1.5em 0.6em 1em;
 	}
 	.view, .view .mask, .view .content {
 		width: 283px;
@@ -1038,7 +1060,7 @@ a.play-icon span {
 		margin:0 0 2em;
 	}
 	.team_grid1_agileits {
-		width: 85.5%;
+		width: 100%;
 		margin: 0 auto;
 	}
 	.portfolio_grid_w3ls {
@@ -1172,6 +1194,7 @@ a.play-icon span {
 	}
 	.team_grid1_agileits {
 		width: 100%;
+		overflow: hidden;
 	}
 	.view, .view .mask, .view .content {
 		width: 280px;
@@ -1400,6 +1423,7 @@ a.play-icon span {
 	}
 	a.play-icon span {
 		font-size: 2em;
+		
 	}
 	.wthree_services_grid {
 		padding: 0;
